--- a/Admin/Tpl/default/Partyactivity/edit.html
+++ b/Admin/Tpl/default/Partyactivity/edit.html
@@ -50,6 +50,14 @@
 	                 </div>
 	 			</td>
 			</tr>
+			  <tr>
+				<td width='40%' align='right'>简介：</td>
+				<td>
+				<textarea name="summary" rows="6" cols="40">
+				{$PData.summary}
+				</textarea>
+	 			</td>
+			</tr>
 		     	<tr>
 				<td width='40%' align='right'>备注信息：</td>
 				<td>
@@ -62,7 +70,9 @@
 				<br />
 				<br />
 				<br />
-			    <textarea id="content" cols="40" rows="6" name="content">{$PData.content}</textarea>
+			    <textarea id="content" cols="40" rows="6" name="content">
+			      <?php echo  html_entity_decode($PData.content); ?>
+			     </textarea>
                     </td> 
 				 
 			</tr>
