--- a/Admin/Tpl/default/Subjectrace/index.html
+++ b/Admin/Tpl/default/Subjectrace/index.html
@@ -23,7 +23,7 @@
 			<th>时间</th>
 			<th>部门组织</th>
 			<th colspan="2">是否开放</th>
-			<th>操作</th>
+			<th width="200px">操作</th>
 		</tr>
 		<foreach name='SData' item='v'>
 			<tr>
