--- a/Index/Tpl/About/contactus.html
+++ b/Index/Tpl/About/contactus.html
@@ -222,7 +222,7 @@ $('.bxslider1').bxSlider({
         	 
         	if(result.info=='OK')
         	{   var num=result.plans.length;
-        		var str='<span >校园行APP温馨提示:一共有'+num+'种方案:</span>';
+        		var str='<span >长院计算机系温馨提示:一共有'+num+'种方案:</span>';
         		str+='<div align="left"><table border="0" width="100%" cellspacing="0" cellpadding="0">';
         		
         		var obj=result.plans;
