--- a/Index/Tpl/About/contactus.html
+++ b/Index/Tpl/About/contactus.html
@@ -65,8 +65,8 @@ else{document.all(c_Str).style.display='none';}}
                             <li class="gywm_lb">
                             	<div>
                                 	<ul>
-                                	<li><a href="#" onClick="toggle('1')" >联系我们</a></li>
-                                    <li><a href="#" onClick="toggle('2')" >意见反馈</a></li>
+                                	<li><a href="<?php echo U('About/contactus');?>"  >联系我们</a></li>
+                                    <li><a href="<?php echo U('Feedback/index');?>" >意见反馈</a></li>
                                     </ul>
                                 </div>
                             </li>
