--- a/Mobile/Tpl/layout.html
+++ b/Mobile/Tpl/layout.html
@@ -29,14 +29,8 @@
 				<div class="clearfix"></div>
 			</nav>
 			<ul class="nav-list" id="nav-list">
-				<a class="font40" href="index.html"><li class="navlist-item">公司首页</li></a>
-				<a class="font40" href="company.html"><li class="navlist-item">公司简介</li></a>
-				<a class="font40" href="###"><li class="navlist-item">精彩专题</li></a>
-				<a class="font40" href="new-center.html"><li class="navlist-item">新闻中心</li></a>
-				<a class="font40" href="product.html"><li class="navlist-item">产品展示</li></a>
-				<a class="font40" href="company-pic.html"><li class="navlist-item">公司相册</li></a>
-				<a class="font40" href="online-message.html"><li class="navlist-item">在线留言</li></a>
-				<a class="font40" href="contact.html"><li class="navlist-item">联系我们</li></a>
+				<a class="font40" href="<?php echo U('Index/index') ?>"><li class="navlist-item">首页</li></a>
+                 <a class="font40" href="<?php echo U('Login/index') ?>"><li class="navlist-item">注册登录</li></a>
 			</ul>
 			<!--<banner class="banner clear">-->
 			    <div id="focus" class="focus banner clear">
@@ -70,7 +64,7 @@
 				 
 				<div class="clearfix"></div>
 				<div class="footer-note">
-					<p class="font40 note-item">版权所有</p>
+					<p class="font40 note-item">版权所有 计科1302_Darren</p>
 					<p class="font40 note-item"></p>
 				</div>
 			</ul>
