--- a/Admin/Tpl/default/Stu/index.html
+++ b/Admin/Tpl/default/Stu/index.html
@@ -24,9 +24,10 @@
 					<th>姓名</th>
 					<th>免冠图片</th>
 					<th>班级</th>
+					<th colspan="2">状态</th>
 					<th>操作</th>
                     </tr>
-                
+               
 			
 
 				<foreach name='CData' item='v'>
@@ -45,6 +46,16 @@
 				</td>
 				<td  align='center'>
 					{$v.name}
+				</td>
+				<td  align='center'>
+					<?php echo $v['locked']==0?'锁定':'开放'; ?>
+				</td>
+				<td  align='center'>
+				   <?php if($v['locked']==0){ ?>
+					<a href="{:U('changeLocked', array('id' => $v['id'],'status'=>1))}" class='quality'>开放</a>
+				  <?php  }else{ ?>
+				    <a href="{:U('changeLocked', array('id' => $v['id'],'status'=>0))}" class='quality'>锁定</a>
+				  <?php } ?>
 				</td>
 				<td width='300' align='center'>
 				<a href="{:U('showQuality', array('id' => $v['id']))}" class='quality'>素质拓展</a>
