--- a/Mobile/Tpl/Login/reg.html
+++ b/Mobile/Tpl/Login/reg.html
@@ -11,7 +11,9 @@
     <div id="login"></div>
     <div class="login_bg">
         <div id="logo">
-            <img src="__PUBLIC__/login/images/czxy.png" alt=""/>
+        <a href="<?php echo U('Index/index'); ?>">
+            <img src="__PUBLIC__/login/images/czxy.png" alt="长治学院计算机系"/>
+        </a>
         </div>
         <form action="__SELF__" method="POST">
             <div class="userName">
